--- a/css/style.css
+++ b/css/style.css
@@ -2,46 +2,98 @@ body{
     margin: 0;
     padding: 0;
 }
-
-.header {
-    background-color:rgb(243, 247, 247);
+/* aligns the navbar items to the right*/
+.navbar{
+    float:right;
 }
-
-.header img{
+/* reduce the size of the app and username icon*/
+.navbar img{
     width: 1.4em;
     height: 1.4 em;
 }
-.menu{
-    float: right;
+/*styles the links to look like that of googles*/
+.navbar ul li{
+    display: inline;  
 }
-.menu ul li a{
-    list-style: none;
-}
-
-.menu ul li{
-    margin: 0;
-    padding: .5em;
-    list-style: none;
+.navbar ul  li a{
     display: inline;
-    float: right;
+    color:#353434;
+    list-style-type: none;
     text-decoration: none;
+    font-size: 1em;
+    padding: 0 5px;
 }
-#mainContaint{
+/*==google logo section==*/
+.logo{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+}
+.logo img{
     position: absolute;
-    top:30%;
-    left:40%;
+    top: 25%;
+    margin:0 auto;
+}
+/* search box styling*/
+.search-box{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
+.searchMe{
+    position: absolute;
+    border: 3px solid #868282;
+    line-height: 2em;
+    height: 2em;
+    width: 50%;
+    top:40%;
+}
+/*==two buttons ==*/
+.btns{
+    display: inline;
+    margin-left: auto;
+    margin-right: auto; 
+    width: 70%;
+    position: absolute;
+    top: 45%;
+    left: 30%;
+}
+/* ==== the language links section===*/
+.language-links li{
+    display: inline;
+    color:#353434;
+    list-style-type: none;
+    text-decoration: none;
+    font-size: 1em;
+    padding: 0 5px;
+}
+.language-links a{
+    list-style-type: none;
+    text-decoration: none;
+    justify-items: auto;
+    padding: 0 .2em;
+    top: 50%;
 }
 .footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-   
+  background-color: #ecdbdb;
+  border-top: 1px solid #cec6c6;
+  font-size: .8em;
 }
 .footer ul li {
    list-style-type: none;
+   display: inline;
+   
 }
 .footer ul li a{
+    color: #1f1c1c;
     list-style-type: none;
+    text-decoration: none;
+    padding-left: .6em;
  }
 .footer ul li a:hover{
     color:rgb(209, 37, 37);
@@ -54,6 +106,13 @@ body{
 }
 .setting{
     float: right;
-    margin-right: 0;
+    margin-right: 5px;
+    
+}
+.foot2{
+    border-top: 2px solid #cec6c6;
+}
 
+.clr{
+    overflow: auto;
 }
