--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,12 @@ body{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
+    width: 50%;
 }
 .logo img{
     position: absolute;
     top: 25%;
+    left: 30%;
     margin:0 auto;
 }
 /* search box styling*/
@@ -45,10 +46,11 @@ body{
 .searchMe{
     position: absolute;
     border: 3px solid #868282;
-    line-height: 2em;
-    height: 2em;
+    line-height: 4em;
+    height: 3em;
     width: 50%;
     top:40%;
+    border-radius: 10px;
 }
 /*==two buttons ==*/
 .btns{
@@ -57,10 +59,15 @@ body{
     margin-right: auto; 
     width: 70%;
     position: absolute;
-    top: 45%;
+    top: 47%;
     left: 30%;
 }
 /* ==== the language links section===*/
+.language-links{
+    position: absolute;
+    top: 50%;
+    left: 25%;
+}
 .language-links li{
     display: inline;
     color:#353434;
@@ -68,6 +75,7 @@ body{
     text-decoration: none;
     font-size: 1em;
     padding: 0 5px;
+    width: 80%;
 }
 .language-links a{
     list-style-type: none;
@@ -80,9 +88,9 @@ body{
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #ecdbdb;
+  background-color: #fff4f4;
   border-top: 1px solid #cec6c6;
-  font-size: .8em;
+  font-size: 1em;
 }
 .footer ul li {
    list-style-type: none;
@@ -96,9 +104,7 @@ body{
     padding-left: .6em;
  }
 .footer ul li a:hover{
-    color:rgb(209, 37, 37);
-    text-decoration: underline;
-    
+    text-decoration: underline;   
 }
 .ad{
     float: left;
